--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -56,7 +56,7 @@ management:
 logging:
   level:
     com.findata.api: DEBUG
-    org.hibernate.SQL: DEBUG
+    org.hibernate.SQL: INFO
 
 alphavantage:
   api-key: ${ALPHAVANTAGE_API_KEY:demo}
